[FIX] layout shift on mobile due to reasons that i will not explain :)

--- a/app/globals.css
+++ b/app/globals.css
@@ -36,8 +36,8 @@
   }
 }
 
-body[data-scroll-locked] {
-  @apply mt-6 2xl:mt-24 px-6 !important;
+body.flex[data-scroll-locked] {
+  @apply  mt-12 p-6 !pb-0 md:p-12 2xl:p-24 [overflow:visible!important] [overscroll-behavior:initial!important]
 }
 
 /* For hydration errors */
